--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-lib/others/tokens.dart
+lib/tokens.dart
 
 # Web related
 lib/generated_plugin_registrant.dart
